--- a/Style.css
+++ b/Style.css
@@ -79,6 +79,7 @@ body {
   margin-bottom: 8px;
 }
 
+
 .me {
   background-color: rgb(20, 72, 93);
   border-radius: var(--border-radius);
@@ -295,7 +296,7 @@ button[type="submit"] {
 }
 @media (max-width: 700px) {
   .abouts {
-    width: 45vh;
+    width: fit-content;
     display: flexbox;
     flex-wrap: wrap;
     align-items: start;
